--- a/index.html
+++ b/index.html
@@ -3,38 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <meta name="viewport" content="widspan=device-widspan, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css" type='text/css'>
+    <link rel="stylesheet" href="css/allIcons.min.css" type='text/css'>
+    <script type="text/javascript">
+        const click = (node) => {
+            alert(node);
+            console.log(node)
+        };
+    </script>
+    <title>Radency React TestTask WebApp</title>
 </head>
 <body>
-     <table class="notesTable">
-        <thead>
-            <th>Name</th>
-            <th>Created</th>
-            <th>Category</th>
-            <th>Content</th>
-            <th>Dates</th>
-            <th></th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-     </table>
+     <!--section class="notesTable" /*onclick="alert(this.target);"*/
+        <div class="tableHead">
+            <span>Name</span>
+            <span>Created</span>
+            <span>Category</span>
+            <span>Content</span>
+            <span>Dates</span>
+            <span>
+                <i class="fa fa-archive" aria-hidden="true"></i>
+                <i class="fa fa-trash" aria-hidden="true"></i>
+            </span>
+        </div>
+        <div class="row">
+                <span>1</span>
+                <span><i class="fab fa-github-square"></i></span>
+                <span>task</span>
+                <span>5 may, 2021</span>
+                <span>categ</span>
+                <span>change</span>
+                <span>
+                    <i class="fa fa-archive" aria-hidden="true"></i>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                    <i class="fa fa-trash" aria-hidden="true"></i>
+                </span>
+        </div>
+        <div class="row">
+                <span>2</span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+        </div>
+        <div class="row">
+            <span>3</span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+     </section>
+     <button /*onclick=(alert(123))*/>Create note</button-->
+     <rootApp></rootApp>
 </body>
+<script type="module" src="js/index.js"></script>
 </html>
